appId: com.jbcom.willitblow
---
- launchApp:
    clearState: true
- tapOn: "START COOKING"
- assertVisible: "CHOOSE YOUR"
- assertVisible: "DONENESS"
- assertVisible: "Rare"
- assertVisible: "Medium"
- assertVisible: "Well Done"
- assertVisible: "PERMADEATH"
